# oef-sdk-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile
apps/: CMakeLists.txt
apps/client/: CMakeLists.txt
apps/client/src/: main.cpp
apps/clientsherd/: CMakeLists.txt
apps/clientsherd/src/: main.cpp
apps/meteoclient/: CMakeLists.txt
apps/meteoclient/src/: main.cpp
apps/meteostation/: CMakeLists.txt
apps/meteostation/src/: main.cpp
apps/meteostationsim/: CMakeLists.txt
apps/meteostationsim/src/: main.cpp
lib/: CMakeLists.txt
lib/benchmark/: CMakeLists.txt
lib/include/: agent.hpp  dialogue.hpp  oefcoreproxy.hpp  queue.hpp  uuid.hpp
lib/src/: dialogue.cpp
lib/test/: CMakeLists.txt
lib/test/src/: dialogue.cpp  tests.cpp  transfer.cpp
oef-core/lib/include/: clientmsg.hpp
oef-sdk-cpp-image/: Dockerfile  docker-env.sh
scripts/: code-static-analyze-cppcheck.sh
