################################################################################
# F E T C H   O E F   S D K   C P P   A P P S
################################################################################
add_subdirectory(client)
add_subdirectory(clientsherd)
#add_subdirectory(meteostation)
add_subdirectory(meteostationsim)
add_subdirectory(meteoclient)
